--- a/index.html
+++ b/index.html
@@ -144,17 +144,16 @@
             </section>
 
             <section class="service">
-                <h3 class="h3 service-title">Mes domaines d'expertise</h3>
+                <h3 class="h3 service-title">Mes centres d'intérêts en informatique</h3>
                 <ul class="service-list">
                     <li class="service-item">
                         <div class="service-icon-box">
-                            <ion-icon name="code-slash-outline"></ion-icon>
+                            <ion-icon name="desktop-outline"></ion-icon>
                         </div>
                         <div class="service-content-box">
-                            <h4 class="h4 service-item-title">Programmation graphique</h4>
+                            <h4 class="h4 service-item-title">Applications</h4>
                             <p class="service-item-text">
-                                Développement de moteurs de rendu 2D/3D en C++ et OpenGL, avec optimisation des performances
-                                et gestion de la mémoire.
+                                Depuis mon entrée en BUT Informatique à Vannes, j'ai développé un intérêt croissant pour le développement d'applications desktop, mobiles ou web. J'apprécie particulièrement imaginer l'organisation interne de l'application et améliorer l'expérience utilisateur, au-delà d'une interface graphique.
                             </p>
                         </div>
                     </li>
@@ -164,23 +163,21 @@
                             <ion-icon name="cube-outline"></ion-icon>
                         </div>
                         <div class="service-content-box">
-                            <h4 class="h4 service-item-title">Moteurs physiques</h4>
+                            <h4 class="h4 service-item-title">Jeux vidéo</h4>
                             <p class="service-item-text">
-                                Création de moteurs de simulation physique pour rigid bodies, avec détection de collisions
-                                et résolution de contraintes.
+                                J'ai commencé à créer des jeux en Python, puis approfondi le développement en Java avec Minecraft, avant de concevoir un moteur de jeu en C++. En parallèle, je me suis aussi investi dans le développement d'applications.
                             </p>
                         </div>
                     </li>
 
                     <li class="service-item">
                         <div class="service-icon-box">
-                            <ion-icon name="desktop-outline"></ion-icon>
+                            <ion-icon name="code-slash-outline"></ion-icon>
                         </div>
                         <div class="service-content-box">
-                            <h4 class="h4 service-item-title">Applications de bureau</h4>
+                            <h4 class="h4 service-item-title">Moteurs de jeu</h4>
                             <p class="service-item-text">
-                                Développement d'applications complètes avec interfaces utilisateur modernes
-                                (JavaFX, Python) et bases de données.
+                                Après avoir créé de nombreux jeux dans différents langages, plus ou moins complexes, j'ai voulu comprendre le fonctionnement interne d'un moteur de jeu. Cela m'a donné envie d'en concevoir un moi-même pour approfondir mes connaissances et explorer la logique en détail.
                             </p>
                         </div>
                     </li>
@@ -190,10 +187,9 @@
                             <ion-icon name="globe-outline"></ion-icon>
                         </div>
                         <div class="service-content-box">
-                            <h4 class="h4 service-item-title">Développement web</h4>
+                            <h4 class="h4 service-item-title">Intelligence artificielle</h4>
                             <p class="service-item-text">
-                                Conception de sites et applications web responsives avec HTML, CSS, JavaScript
-                                et frameworks modernes.
+                                Je suis passionné par l'évolution de l'intelligence artificielle, et ce, même avant l'arrivée des premières IA grand publique qui ont popularisé le domaine. J'ai toujours voulu contribuer à la recherche en IA ou, du moins, imaginer de nouvelles façons de la rendre utile et accessible.
                             </p>
                         </div>
                     </li>
